# Student-Management-System-Mine-Matrix

./: package-lock.json  readme.md
client/: package-lock.json  package.json
server/: pyproject.toml
